# code_evaluation

./: .gitignore  app.py  distance.py  pyproject.toml  test_app.py
templates/: index.html
tests/: conftest.py  test_api.py  test_distance.py  test_web_ui.py
