[project]
name = "my-distance"
version = "0.1.0"
description = "Application web de calcul de distance entre deux points dans un plan 2D"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app", "distance"]
omit = ["tests/*"]
